# wms

./: .gitignore  .pre-commit-config.yaml  Agents.md  Makefile  Skills.md  requirements.md
.github/workflows/: ci.yml
wms-core/: .env.example  coverage.json  main.py  pyproject.toml  wms-backend.postman_collection.json  wms.db
wms-core/app/: admin.py  main.py
wms-core/app/ai/: agent_mention.py  manager.py  task_analysis.py
wms-core/app/ai/agents/executor/: Professional.md
wms-core/app/ai/agents/manager/: Professional.md
wms-core/app/ai/agents/thinker/: Professional.md
wms-core/app/ai/tools/: browser.py
wms-core/app/api/: agents.py  auth.py  comments.py  tasks.py
wms-core/app/core/: config.py
wms-core/app/db/: session.py
wms-core/app/models/: __init__.py  agent.py  comment.py  task.py  user.py
wms-core/app/schemas/: agent.py  comment.py  task.py  user.py
wms-core/tests/: conftest.py  test_admin.py  test_agent_mentions.py  test_agents.py  test_ai_analysis.py  test_auth.py  test_browser_tool.py  test_comments.py  test_manager.py  test_models_schemas.py  test_startup.py  test_tasks.py
wms-front/: index.html  package.json
wms-front/coverage/: coverage-summary.json
wms-front/src/: App.tsx
wms-front/src/api/: index.ts
wms-front/src/components/: Column.tsx  CommentPanel.tsx  CommentSection.tsx  MentionTextarea.tsx  MentionsPanel.tsx  Sidebar.tsx  TaskCard.tsx  TaskModal.tsx  TaskPage.tsx  index.ts
wms-front/src/test/: Column.test.tsx  CommentPanel.test.tsx  CommentSection.test.tsx  MentionTextarea.test.tsx  Sidebar.test.tsx  TaskCard.test.tsx  TaskModal.test.tsx  TaskPage.test.tsx  api.test.ts  fixtures.ts  setup.ts
wms-front/src/types/: index.ts
