[project]
name = "wms-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.129.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.15",
    "langgraph>=1.0.9",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqladmin>=0.23.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.15.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*"]
concurrency = ["greenlet"]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "@asynccontextmanager",
    "async def lifespan",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "RUF002", # ambiguous unicode in docstrings (en-dashes are intentional)
    "RUF003", # ambiguous unicode in comments (en-dashes are intentional)
    "RUF012", # mutable class attrs without ClassVar (sqladmin pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "B017", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
